# bunkr-uploader

./: .env  Cargo.toml  README.md  readme.md
src/: main.rs
src/modules/: create_album.rs  mod.rs
src/utils/: api.rs  extras.rs  mod.rs
