[package]
name = "bunkr-uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dialoguer = "0.11.0"
indicatif = "0.18.0"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
